--- a/index.html
+++ b/index.html
@@ -21,14 +21,75 @@
 
     <main>
         <section class="membership">
+            <a href="#!" class="membership__title">Membership has its benefits</a>
+            <p class="membership__text">You help your clients build their business with Mailchimp. So we designed a
+                <br>
+                community to help you grow yours, in your own unique way.
+            </p>
+
             <div class="container">
-              
-            </div>
+                <div class="container__card">
+                    <div class="container__cards">
+                        <div class="card__image">
+                            <img src="./img/membership/icnons4.png" alt="error">
+                        </div>
+                        <div class="card__title">
+                            Grow your business
+                        </div>
+                        <div class="card__text">
+                            <p>Find more clients and earn rewards.</p>
+                        </div>
+                    </div>
+
+                    <div class="container__card">
+                        <div class="container__cards">
+                            <div class="card__image">
+                                <img src="./img/membership/icons2.png" alt="error">
+                            </div>
+                            <div class="card__title">
+                                Expand your expertise
+                            </div>
+                            <div class="card__text">
+                                <p>With Mailchimp & Co, you get access to exclusive tips and training.</p>
+                            </div>
+                        </div>
+
+                        <div class="container__card">
+                            <div class="container__cards">
+                                <div class="card__image">
+                                    <img src="./img/membership/icons3.png" alt="error">
+                                </div>
+                                <div class="card__title">
+                                    Simplify client work
+                                </div>
+                                <div class="card__text">
+                                    <p>Get Mailchimp tools designed just for freelancers and agencies like you.</p>
+                                </div>
+                            </div>
+
+                            <div class="container__card">
+                                <div class="container__cards">
+                                    <div class="card__image">
+                                        <img src="./img/membership/icons1.png" alt="error">
+                                    </div>
+                                    <div class="card__title">
+                                        Get insider perks
+                                    </div>
+                                    <div class="card__text">
+                                        <p>From inspiring events to first looks at new features, weve got you covered.
+                                        </p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
         </section>
 
         <section class="guide">
             <div class="container">
-                
+
             </div>
         </section>
 
