--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p class="info__text">Once you're in, you're part of a collective of Mailchimp insiders—from budding
                     freelancers to seasoned agencies. You'll get tools to help you do your thing, earn more for your
                     work, and unlock more benefits along the way.</p>
-                    
+
                 <div class="info__cards">
                     <div class="info__passage">
                         <div class="info__passage-texts">
@@ -104,26 +104,30 @@
         <section class="slider">
             <div class="container">
                 <span class="slider__container-span">See what our partners are saying</span>
-               <div class="frame container">
-                <img src="./img/slider/man.png" alt="error" class="slider__container-image">
-                <p class="slider__container-text">Mailchimp’s robust support and documentation has allowed us to explore unique solutions and evolve with our brand's needs in ways other ‘enterprise’ marketing platforms should take notice of.
-                    <span class="slider__container__text-span">Danny Phillips, Director of Arkade</span>
-                </p>
-               </div>
-               <div class="circle">
-                <div class="circles1"></div>
-                <div class="circles"></div>
-                <div class="circles"></div>
-                <div class="circles"></div>
-                <div class="circles"></div>
-               </div>
+                <div class="frame container">
+                    <img src="./img/slider/man.png" alt="error" class="slider__container-image">
+                    <p class="slider__container-text">Mailchimp’s robust support and documentation has allowed us to
+                        explore unique solutions and evolve with our brand's needs in ways other ‘enterprise’ marketing
+                        platforms should take notice of.
+                        <span class="slider__container__text-span">Danny Phillips, Director of Arkade</span>
+                    </p>
+                </div>
+                <div class="circle">
+                    <div class="circles1"></div>
+                    <div class="circles"></div>
+                    <div class="circles"></div>
+                    <div class="circles"></div>
+                    <div class="circles"></div>
+                </div>
             </div>
         </section>
 
         <section class="already">
-            <div class="already__container"> 
+            <div class="already__container">
                 <h1 class="already__title">Already have a Mailchimp account?</h1>
-                <p class="already__text">Good news! If you’re a freelancer or agency, you can enjoy these benefits for no additional cost as soon as you join Mailchimp & Co. You won't lose any existing data and you can revert back at any time.</p>
+                <p class="already__text">Good news! If you’re a freelancer or agency, you can enjoy these benefits for
+                    no additional cost as soon as you join Mailchimp & Co. You won't lose any existing data and you can
+                    revert back at any time.</p>
                 <button class="already__button">Join Mailchimp & Co</button>
             </div>
         </section>
@@ -146,7 +150,6 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-
             </div>
         </div>
     </footer>
