--- a/index.html
+++ b/index.html
@@ -66,6 +66,40 @@
 
         <section class="community">
             <div class="container">
+                <span class="community__container-span">Get inspiration from your community</span>
+                <div class="community__container-cards">
+                    <div class="community__container-card">
+                        <img src="./img/community/image 2.png" alt="error" class="community__container__card-image">
+                        <div class="community__container__card-span">Business Tips</div>
+                        <h3 class="community__container__card-title">Pro Tips for Auditing Your Client’s Mailchimp Account</h3>
+                        <p class="community__container__card-text">Because of founder Brett Farmiloe’s auditing background, it’s in his agency Markitors' DNA to analyze every piece of information and formulate a story using that data. Here are his tips for a good email audit.</p>
+                    </div>
+                    <div class="community__container-card">
+                        <img src="./img/community/image 3.png" alt="error" class="community__container__card-image">
+                        <div class="community__container__card-span">Business Tips</div>
+                        <h3 class="community__container__card-title">Practicing Self-Care as a Freelancer </h3>
+                        <p class="community__container__card-text">Easy ways for freelancers to infuse self-care into their daily lives
+                        </p>
+                    </div>
+                    <div class="community__container-card">
+                        <img src="./img/community/image 4.png" alt="error" class="community__container__card-image">
+                        <div class="community__container__card-span">Business Tips</div>
+                        <h3 class="community__container__card-title">Dissecting Really Good Email with Lucky Red Pixel
+                        </h3>
+                        <p class="community__container__card-text">Email is important, but sometimes it’s low on a company’s to-do list, which can cultivate a lot of issues. Florida-based agency Lucky Red Pixel walks us through what it takes to compose a good one—and how to fix common mistakes.
+                        </p>
+                    </div>
+                </div>
+                <div class="community__container-buttons">
+                    <div class="community__container-button">
+                        <h4 class="community__container__button-title">Ready to explore the benefits?</h4>
+                        <button class="community__container__button-btn">See benefits</button>
+                    </div>
+                    <div class="community__container-button">
+                        <h4 class="community__container__button-title">Looking for freelancer tools?</h4>
+                        <button class="community__container__button-btn">See tools</button>
+                    </div>
+                </div>
 
             </div>
         </section>
