--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p class="info__text">Once you're in, you're part of a collective of Mailchimp insiders—from budding
                     freelancers to seasoned agencies. You'll get tools to help you do your thing, earn more for your
                     work, and unlock more benefits along the way.</p>
-                    
+
                 <div class="info__cards">
                     <div class="info__passage">
                         <div class="info__passage-texts">
@@ -96,7 +96,7 @@
                         <img src="./img/info/Rectangle (3).png" alt="error">
                     </div>
 
-                
+
                 </div>
             </div>
         </section>
@@ -128,9 +128,104 @@
 
 
     <footer class="footer">
-        <div class="container">
-            <div class="row">
+        <div class="container footer1">
 
+            <div class="footer__lists">
+                <h6 class="footer__lists-title">Products</h6>
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Why Mailchimp?</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Product Updates</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Email Marketing</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Websites</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Transactional Email</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">How We Compare</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">GDPR Compliance</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Security</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Status</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Mobile App</a></li>
+                </ul>
+            </div>
+
+            <div class="row footer__lists">
+                <h6 class="footer__lists-title">Resources</h6>
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Guides & Tutorials</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Marketing Tips</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Marketing Glossary</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Browse by Topic</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Integrations Directory</a></li>
+                </ul>
+            </div>
+
+            <div class="row footer__lists">
+                <h6 class="footer__lists-title">Community</h6>
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Agencies & Freelancers</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Developers</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Events</a></li>
+                </ul>
+            </div>
+
+            <div class="row footer__lists">
+                <h6 class="footer__lists-title">Company</h6>
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Our Story</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Newsroom</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Annual Report</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Careers</a></li>
+                </ul>
+            </div>
+
+            <div class="row footer__lists">
+                <h6 class="footer__lists-title">Help</h6>
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Contact Us</a></li>
+                    <li class="footer__list-item"><a href="#!" class="list-item__link">Hire an Expert</a></li>
+            </div>
+
+            <div class="footer__services">
+                <div class="footer__services-info">
+                    <img src="./img/info/monkey.png" alt="error" class="footer__services-info__img1">
+                    <p class="footer__services-info__text">Films, podcasts and original series that celebrate the
+                        entrepreneurial spirit.</p>
+                    <a href="" class="footer__services-btn">Check it out</a>
+                </div>
+                <div class="footer__services-info">
+                    <img src="./img/footer/footer1.png" alt="error" class="footer__services-info__img"> /
+                    <img src="./img/footer/Vector (16).png" alt="error" class="footer__services-info__img pic2">
+                    <img src="./img/footer/Vector (17).png" alt="error" class="footer__services-info__img pic">
+                    <p class="footer__services-info__text">Expert insights, industry trends, and inspiring stories that
+                        help you live and work on your own terms.</p>
+                    <a href="" class="footer__services-btn">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="container footer2">
+            <div class="ios__play-market">
+                <a href="#!" class="ios__link"><img src="./img/footer/Frame (1).png" alt="error" class="footer__last-image"></a>
+                <a href="#!" class="ios__link"><img src="./img/footer/Frame (2).png" alt="error"
+                        class="footer__last-image"></a>
+            </div>
+
+            <div class="footer__social-m__icons">
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/Vector (19).png" alt="error"></a>
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/Vector (20).png" alt="error"></a>
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/LinkedIn.png" alt="error"></a>
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/Vector (21).png" alt="error"></a>
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/Vector (22).png" alt="error"></a>
+                <a href="#!" class="social-m__icon"><img class="footer__last-image" src="./img/footer/Vector (23).png" alt="error"></a>
+            </div>
+
+            <div class="footer__last">
+                <h5 class="footer__last-h5"><a class="footer__last-t" href="#!">Read this page in</a></h5>
+                <p class="footer__last-text">©2001-2021 All Rights Reserved. Mailchimp® is a registered trademark of The
+                    Rocket Science Group. Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S.
+                    and other countries. Mac App Store is a service mark of Apple Inc. Google Play and the Google Play
+                    logo are trademarks of Google Inc.</p>
+                <span class="footer__last-span"><a class="last-span__link" href="#!">Privacy & Terms</a></span>
             </div>
         </div>
     </footer>
